src/styles/mobile.css
.mobile-display {
    width: 100vw;
    height: 100vh;

    box-sizing: border-box;
    border: var(--border-style);
}

div.mobile-display > .top {
    height: 35vh;
    width: 100%;

    padding: 5vw;
}

@media screen and (max-width: 500px) {
    .mobile-display .after-logo {
        height: 20vw;
    }
    div.mobile-display .logo {
        transform-origin: top left;
        scale: calc(150% / calc( 768 / var(--window-width)));
    }
}

@media screen and (min-width: 500px) {
    .mobile-display .after-logo {
        height: 13vw;
    }
    div.mobile-display .logo {
        transform-origin: top left;
        scale: calc(100% / calc( 768 / var(--window-width)));
    }
}

p:not(.title) {
    margin: 0;
    font-size: 16px;
}

p.title {
    font-size: 18px;
}

.mobile-display .description {
    width: 88vw;
}

/*
 * 
 * Bottom
 *
 */

.mobile-display > .bottom {
    --split-dimension: 50%;

    transform-origin: 50% 0%;
    transform: rotate(-20deg) translate(-7vw, 2vh);
    width: 110vw;
}

div.bottom > .link-bar {
    width: 100%;
    display: flex;
    justify-content: center;
}

div.bottom > .content-list {
    border-top: var(--border-style);
    width: 100%;
    height: 150vw;
}

.content-list > .left {
    height: 100%;
    width: 150vw;
    float: left;
    margin-left: -100vw;

    background-color: green;
    border-right: var(--border-style);
}

/* .content-list > .right {
    float: left;
    height: 100%;
    width: var(--split-dimension);
} */

/*
 * 
 * Link
 *
 */

 .link-bar > .link {
    width: 100vw;
    display: flex;
    justify-content: space-between;
 }

 .link-bar > .link a {
    font-size: 20px;

    margin-bottom: 3px;
    text-decoration: none;
    color: var(--color-main);
 }

